orientation.unlock should throws an exception per common safety check
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox138 | --- | fixed |
People
(Reporter: m_kato, Assigned: m_kato)
Details
Attachments
(1 file)
Assignee | ||
Updated•2 months ago
|
Assignee | ||
Comment 1•2 months ago
|
||
Updated•2 months ago
|
Assignee | ||
Comment 2•1 month ago
|
||
orientation.unlock()
has to process the common safety checks [*1], then
it throws an exception by common safety checks. But since old spec doesn't
throw an exception, we don't throw it by unlock()
now.
So we should throw it even if calling unlock().
lock-sandboxed-iframe.html
has a bug that it doesn't consider
whether unlock throws an exception. So we have to fix it to implement
the common safety check for unlock().
On macOS's native fullscreen implementation, fullscreen transition is
asynchronous, so even if the promise of requestFullscreen
is resolved,
the window isn't still activated yet, visibility state may be still hidden.
(This will be visible state soon). So I would like to disable native
fullscreen on screen-orientation tests for this situation.
Comment 5•1 month ago
|
||
bugherder |
Description
•