dom/base/ScreenOrientation.cpp
@@ -424,6 +424,46 @@ void ScreenOrientation::AbortInProcessOrientationPromises(
   });
 }
 
+// https://w3c.github.io/screen-orientation/#dfn-common-safety-checks.
+
+// static
+bool ScreenOrientation::CommonSafetyChecks(nsPIDOMWindowInner* aOwner,
+                                           Document* aDocument,
+                                           ErrorResult& aRv) {
+  MOZ_ASSERT(aOwner);
+  MOZ_ASSERT(aDocument);
+
+  // Chrome can always lock the screen orientation.
+  if (aOwner->GetBrowsingContext()->IsChrome()) {
+    return true;
+  }
+
+  // 5.4.1.
+  // If document is not fully active, throw an "InvalidStateError" DOMException.
+  if (!aOwner->IsFullyActive()) {
+    aRv.Throw(NS_ERROR_DOM_INVALID_STATE_ERR);
+    return false;
+  }
+
+  // 5.4.2.
+  // If document has the sandboxed orientation lock browsing context flag set,
+  // throw "SecurityError" DOMException.
+  if (aDocument->GetSandboxFlags() & SANDBOXED_ORIENTATION_LOCK) {
+    aRv.Throw(NS_ERROR_DOM_SECURITY_ERR);
+    return false;
+  }
+
+  // 5.4.3.
+  // If document's visibility state is "hidden", throw "SecurityError"
+  // DOMException.
+  if (aDocument->Hidden()) {
+    aRv.Throw(NS_ERROR_DOM_SECURITY_ERR);
+    return false;
+  }
+
+  return true;
+}
+
 already_AddRefed<Promise> ScreenOrientation::LockInternal(
     hal::ScreenOrientation aOrientation, ErrorResult& aRv) {
   // Steps to apply an orientation lock as defined in spec.
@@ -436,10 +476,6 @@ already_AddRefed<Promise> ScreenOrientation::LockInternal(
     aRv.Throw(NS_ERROR_DOM_INVALID_STATE_ERR);
     return nullptr;
   }
-
-  // Step 2.
-  // If document is not fully active, return a promise rejected with an
-  // "InvalidStateError" DOMException.
 
   nsCOMPtr<nsPIDOMWindowInner> owner = GetOwnerWindow();
   if (NS_WARN_IF(!owner)) {
@@ -460,18 +496,20 @@ already_AddRefed<Promise> ScreenOrientation::LockInternal(
     return nullptr;
   }
 
-  if (!owner->IsFullyActive()) {
-    p->MaybeReject(NS_ERROR_DOM_INVALID_STATE_ERR);
+  if (!CommonSafetyChecks(owner, doc, aRv)) {
+    if (aOrientation == hal::ScreenOrientation::None) {
+      // When unlock, throws a DOM exception.
+      return nullptr;
+    }
+    p->MaybeReject(aRv.StealNSResult());
     return p.forget();
   }
 
-  // Step 3.
-  // If document has the sandboxed orientation lock browsing context flag set,
-  // or doesn't meet the pre-lock conditions, or locking would be a security
-  // risk, return a promise rejected with a "SecurityError" DOMException and
-  // abort these steps.
+  // If document doesn't meet the pre-lock conditions, or locking would be a
+  // security risk, return a promise rejected with a "SecurityError"
+  // DOMException and abort these steps.
 
-  LockPermission perm = GetLockOrientationPermission(true);
+  LockPermission perm = GetLockOrientationPermission(owner, doc);
   if (perm == LOCK_DENIED) {
     p->MaybeReject(NS_ERROR_DOM_SECURITY_ERR);
     return p.forget();
@@ -687,26 +725,16 @@ uint16_t ScreenOrientation::GetAngle(CallerType aCallerType,
   return angle;
 }
 
+// static
 ScreenOrientation::LockPermission
-ScreenOrientation::GetLockOrientationPermission(bool aCheckSandbox) const {
-  nsCOMPtr<nsPIDOMWindowInner> owner = GetOwnerWindow();
-  if (!owner) {
-    return LOCK_DENIED;
-  }
+ScreenOrientation::GetLockOrientationPermission(nsPIDOMWindowInner* aOwner,
+                                                Document* aDocument) {
+  MOZ_ASSERT(aOwner);
+  MOZ_ASSERT(aDocument);
 
   // Chrome can always lock the screen orientation.
-  if (owner->GetBrowsingContext()->IsChrome()) {
+  if (aOwner->GetBrowsingContext()->IsChrome()) {
     return LOCK_ALLOWED;
-  }
-
-  nsCOMPtr<Document> doc = owner->GetDoc();
-  if (!doc || doc->Hidden()) {
-    return LOCK_DENIED;
-  }
-
-  // Sandboxed without "allow-orientation-lock"
-  if (aCheckSandbox && doc->GetSandboxFlags() & SANDBOXED_ORIENTATION_LOCK) {
-    return LOCK_DENIED;
   }
 
   if (Preferences::GetBool(
@@ -715,7 +743,7 @@ ScreenOrientation::GetLockOrientationPermission(bool aCheckSandbox) const {
   }
 
   // Other content must be fullscreen in order to lock orientation.
-  return doc->Fullscreen() || doc->HasPendingFullscreenRequests()
+  return aDocument->Fullscreen() || aDocument->HasPendingFullscreenRequests()
              ? FULLSCREEN_LOCK_ALLOWED
              : LOCK_DENIED;
 }
